# nabla

./: .gitignore  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Makefile.am  README.md  configure.ac  example.cc  vcpkg.json
nabla/: chain.hh  conditional.hh  constant.hh  division.hh  exponential.hh  fwd.hh  gausscdf.hh  gradient.hh  hessian.hh  hypot.hh  logarithm.hh  nabla.hh  nabla_base.hh  nabla_tag.hh  negation.hh  polynomial.hh  power.hh  product.hh  sum.hh  tag.hh  unary_functions.hh  util.hh  variable.hh  vector.hh
tests/: group_chain.cc  group_conditional.cc  group_constant.cc  group_division.cc  group_explog.cc  group_exponential.cc  group_gradient.cc  group_hessian.cc  group_hyperbolic.cc  group_hypot.cc  group_logarithm.cc  group_negation.cc  group_polynomial.cc  group_power.cc  group_product.cc  group_sum.cc  group_trigonometry.cc  group_unary_functions.cc  group_variable.cc  test_main.cc
